<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_bg"
    tools:context="com.trackfriends.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/email_icon" />

                <View
                    android:id="@+id/divEmal"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/emailIcon"
                    android:layout_toRightOf="@id/emailIcon"
                    android:background="@color/colorWhite" />

                <EditText
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/divEmal"
                    android:layout_toRightOf="@id/divEmal"
                    android:background="@null"
                    android:hint="@string/email_id"
                    android:fontFamily="@font/josefinsans_regular"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/textNormalSize"
                    android:singleLine="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorWhite" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/pwdIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/password_icon" />

                <View
                    android:id="@+id/divPwd"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/pwdIcon"
                    android:layout_toRightOf="@id/pwdIcon"
                    android:background="@color/colorWhite" />

                <EditText
                    android:id="@+id/pwdTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/divPwd"
                    android:layout_toRightOf="@id/divPwd"
                    android:background="@null"
                    android:hint="@string/password"
                    android:fontFamily="@font/josefinsans_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/textNormalSize"
                    android:singleLine="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorWhite" />

            <CheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Remember me"
                android:textSize="@dimen/textSmallSize"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/josefinsans_regular"
                android:backgroundTint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/rounded_gray_border"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:fontFamily="@font/josefinsans_regular"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textNormalSize" />

            <TextView
                android:id="@+id/forgotPwdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:fontFamily="@font/josefinsans_regular"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textSmallSize" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/signUpLay"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:fontFamily="@font/josefinsans_regular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSmallSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_3sdp"
            android:text="@string/sign_up"
            android:fontFamily="@font/josefinsans_regular"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSmallSize" />
    </LinearLayout>

    <com.trackfriends.utils.InsLoadingView
        android:id="@+id/loading_view"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/app_icon"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:visibility="gone"/>






</RelativeLayout>
